fixing text alignments, part one

--- a/sass/_autocomplete.sass
+++ b/sass/_autocomplete.sass
@@ -3,7 +3,7 @@
     margin-bottom: 1em
     font-weight: bold
     font-family: $akkurat
-    @include fontSizes
+    @include fontSizesauto
     color: $background
     text-transform: capitalize
     z-index: 50
