--- a/sass/_sizemixin.sass
+++ b/sass/_sizemixin.sass
@@ -1,4 +1,4 @@
-@mixin fontSizes 
+@mixin fontSizesauto
     font-size: 3em
     bottom: -0.4em
     @media (screen and min-width: 350px)
@@ -36,4 +36,43 @@
         font-size: 14em
     @media (screen and min-width: 1400px)
         bottom: -0.5em
+        font-size: 15em
+@mixin fontSizes
+    font-size: 3em
+    bottom: -0.4em
+    @media (screen and min-width: 350px)
+        font-size: 4em
+        bottom: -0.5663em
+    @media (screen and min-width: 400px)
+        font-size: 5em
+        bottom: -0.5663em
+    @media (screen and min-width: 500px)
+        font-size: 6em
+        bottom: -0.3em
+    @media (screen and min-width: 600px)
+        font-size: 7em
+        bottom: -0.3em
+    @media (screen and min-width: 700px)
+        font-size: 8em
+        bottom: -0.3em
+    @media (screen and min-width: 800px)
+        font-size: 4em
+        bottom: -0.5663em
+    @media (screen and min-width: 900px)
+        bottom: -0.5663em
+        font-size: 9em
+    @media (screen and min-width: 1000px)
+        bottom: -0.5663em
+        font-size: 11em
+    @media (screen and min-width: 1100px)
+        bottom: -0.5663em
+        font-size: 12em
+    @media (screen and min-width: 1200px)
+        bottom: -0.5663em
+        font-size: 13em
+    @media (screen and min-width: 1300px)
+        bottom: -0.5663em
+        font-size: 14em
+    @media (screen and min-width: 1400px)
+        bottom: -0.5663em
         font-size: 15em
